--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,17 +13,16 @@ kotlin {
 
 android {
     namespace 'com.adziashko.todolist.gpt4'
-    compileSdk 33
 
     defaultConfig {
         applicationId "com.adziashko.todolist.gpt4"
         minSdk 23
         compileSdk 34
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.adziashko.todolist.gpt4.AppTestRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -46,6 +45,11 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -57,6 +61,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$compose_ui_version"
     implementation "androidx.navigation:navigation-compose:2.7.5"
     implementation "androidx.compose.material:material:$compose_ui_version"
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -75,7 +80,14 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
 
+    testImplementation 'androidx.test:runner:1.5.2'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
+    testImplementation 'org.robolectric:robolectric:4.11.1'
+    testImplementation "com.google.truth:truth:1.1.4"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
