--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.11.1'
     testImplementation "com.google.truth:truth:1.1.4"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    testImplementation 'androidx.compose.ui:ui-test-junit4-android:1.5.4'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
